[gd_scene load_steps=3 format=3 uid="uid://b0y1dnsn1y6s3"]

[ext_resource type="Script" path="res://FillTimer.gd" id="1_ngyi5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6mif"]
size = Vector2(2, 4)

[node name="FillTimer" type="Timer"]
wait_time = 3.559
one_shot = true
autostart = true
script = ExtResource("1_ngyi5")

[node name="FloorChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorChecker"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_f6mif")

[connection signal="timeout" from="." to="." method="_on_timeout"]
